--- a/css/style.css
+++ b/css/style.css
@@ -55,12 +55,13 @@ body {
 .hero {
     height: 80vh;
     background: linear-gradient(rgba(0,0,0,.6), rgba(0,0,0,.6)),
-                url("https://images.unsplash.com/photo-1599058917212-d750089bc07d") center/cover;
+                url("../assets/img/img-accueil.jpg") center/cover;
     display: flex;
     align-items: center;
     padding: 0 60px;
     color: white;
 }
+
 
 .hero h1 {
     font-size: 48px;
